# ai-workflow-agent

./: .gitignore  README.md  main.py  pyproject.toml
experiments/day1/: add_func.py
experiments/day2/: tool_registry.py
logs/: day1.md  day2.md
src/: day2_concurrent.py  day3_agent.py  day4_chat_agent.py  day6_sentiment_monitor.py  debug_json.py  main.py  memory.py
src/core/: agent.py
src/prompts/: system.py
src/tools/: base.py  report.py  search.py
src/utils/: config.py
